--- a/Quiz/pom.xml
+++ b/Quiz/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.19</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE124</version>
+        </dependency>
     </dependencies>
 </project>
